--- a/webapp/src/pages/Card.scss
+++ b/webapp/src/pages/Card.scss
@@ -1,3 +1,20 @@
 .card {
-    background-color: azure;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    max-width: 25%;
+    margin: auto;
+    border-radius: 10px;
+    padding: 10%;
+}
+
+.attempt {
+    background-color: #f9f9f9;
+    border: none;
+    border-radius: 7px;
+    min-width: 400px;
+    min-height: 20px;
+    padding: 7px;
 }
